(feat) Iglesia parte 1 catalogos

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDlC5XF5kLZhB1wF6_2NNMYo_PBCoVBpms"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
