--- a/index.html
+++ b/index.html
@@ -1,31 +1,34 @@
 <!doctype html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Sistema para gestion de criptas">
-    <meta name="keywords" content="criptas, gestion, administracion, desarrollo personal">
-    <meta name="author" content="Luis Herrera, Amado Chan">
-    <meta name="robots" content="index, follow">
 
-     <!-- Open Graph para redes sociales -->
-    <meta property="og:title" content="Gestión de criptas">
-    <meta property="og:description" content="Sistema para gestion de criptas.">
-    <meta property="og:image" content="https://criptas.gownetwork.com.mx/wallpaper_iglesia.jpg">
-    <meta property="og:url" content="https://criptas.gownetwork.com.mx">
-    <meta property="og:type" content="website">
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Sistema para gestion de criptas">
+  <meta name="keywords" content="criptas, gestion, administracion, desarrollo personal">
+  <meta name="author" content="Luis Herrera, Amado Chan">
+  <meta name="robots" content="index, follow">
 
-    <!-- Twitter Cards -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Gestión de criptas">
-    <meta name="twitter:description" content="Sistema para gestion de criptas.">
-    <meta name="twitter:image" content="https://criptas.gownetwork.com.mx/wallpaper_iglesia.jpg">
+  <!-- Open Graph para redes sociales -->
+  <meta property="og:title" content="Gestión de criptas">
+  <meta property="og:description" content="Sistema para gestion de criptas.">
+  <meta property="og:image" content="https://glomadent.gownetwork.com.mx/wallpaper_glomadent.jpg">
+  <meta property="og:url" content="https://glomadent.gownetwork.com.mx">
+  <meta property="og:type" content="website">
 
-    <title>Bienvenido</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Gestión de criptas">
+  <meta name="twitter:description" content="Sistema para gestion de criptas.">
+  <meta name="twitter:image" content="https://criptas.gownetwork.com.mx/wallpaper_iglesia.jpg">
+
+  <title>Bienvenido</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
